# COEN193

./: README.md  loop copy.cpp  papi.cpp
Y_Cho_Files/: test_dgemm.cpp
dgemm/: .nfs0000000594082cbd00000c81  Makefile  PAPI_input  da.cpp  da.h  dgemm  dgemm.cpp  loop  matmul.h  papi.cpp  papi_events.txt  perfcounters.cpp  perfcounters.h  recorder.h  run_env.sh  runtime.txt  test  test.cpp
dgemm/dgemm_results/: data-2024-3-7-0-6-53.txt  data-2024-3-7-9-5-19.txt  data-2024-3-8-9-40-8.txt  data-2024-4-21-21-52-15.txt  data-2024-4-25-11-22-46.txt  data-2024-4-25-11-23-59.txt  data-2024-4-25-11-29-1.txt  data-2024-4-26-16-49-30.txt
dgemm/papi_results/: .data-2024-4-30-12-1-54.csv.swp  data-2024-4-29-14-12-3.txt  data-2024-4-30-10-53-19.csv  data-2024-4-30-12-29-40.csv  data-2024-4-30-12-32-40.csv  data-2024-4-30-12-34-20.csv  data-2024-5-1-16-10-32.csv  data-2024-5-1-16-11-16.csv  data-2024-5-1-16-11-43.csv  data-2024-5-1-16-11-7.csv  data-2024-5-1-16-2-20.csv  data-2024-5-1-16-5-19.csv  data-2024-5-1-16-5-26.csv  data-2024-5-1-16-5-27.csv  data-2024-5-1-16-5-28.csv  data-2024-5-1-16-6-8.csv  data-2024-5-1-16-8-51.csv  data-2024-5-1-16-9-29.csv  data-2024-5-1-22-54-20.csv  data-2024-5-1-22-55-50.csv  data-2024-5-1-22-56-50.csv  data-2024-5-1-23-10-30.csv  data-2024-5-1-23-8-57.csv  data-2024-5-13-20-14-18.csv  data-2024-5-7-22-36-9.csv  data-2024-5-7-22-40-13.csv  (+3 more)
sketch/: Makefile  README.md  TLS_DenseSkOp  externals.h  papi_events.txt  run_env.sh  sketch_dense.cpp
software/randblas/randlapack-test/: CMakeLists.txt  build-script.sh  clean-script.sh  main.cpp
(+955 files in other folders)
